[gd_scene load_steps=11 format=3 uid="uid://cnv6mkpnnt6eo"]

[ext_resource type="Theme" uid="uid://kuqwnqky71xb" path="res://UI/GameUI.tres" id="1_ppkyl"]
[ext_resource type="Texture2D" uid="uid://b3b61vmw4035u" path="res://Sprites/TileMaps/NewTileMap.png" id="2_jc0oh"]
[ext_resource type="Script" path="res://UI/email_template.gd" id="2_mi0ar"]
[ext_resource type="FontFile" uid="uid://buldmqhegia3a" path="res://UI/Pixels.ttf" id="3_dj55d"]
[ext_resource type="Script" path="res://UI/ScrollingContainer.tres.gd" id="4_m8jdo"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_cr5tf"]
blend_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_3i27l"]
atlas = ExtResource("2_jc0oh")
region = Rect2(80, 112, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_40u6a"]
font = ExtResource("3_dj55d")
font_size = 50

[sub_resource type="GDScript" id="GDScript_xm834"]
script/source = "extends PanelContainer

func _on_email_template_toggled(toggled_on: bool) -> void:
	self.visible = toggled_on
	self.grab_focus()
	get_parent().release_focus()
"

[sub_resource type="FontVariation" id="FontVariation_tqi3w"]
base_font = ExtResource("3_dj55d")
spacing_top = -11

[node name="EmailTemplate" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_ppkyl")
script = ExtResource("2_mi0ar")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(500, 90)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_ppkyl")
theme_type_variation = &"ToggleButton"
toggle_mode = true

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
material = SubResource("CanvasItemMaterial_cr5tf")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Notifcation" type="TextureRect" parent="Button/HBoxContainer"]
material = SubResource("CanvasItemMaterial_cr5tf")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = SubResource("AtlasTexture_3i27l")

[node name="Subject" type="PanelContainer" parent="Button/HBoxContainer"]
material = SubResource("CanvasItemMaterial_cr5tf")
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
mouse_filter = 2
theme = ExtResource("1_ppkyl")

[node name="Subject" type="Label" parent="Button/HBoxContainer/Subject"]
material = SubResource("CanvasItemMaterial_cr5tf")
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.25
text = "Subject"
label_settings = SubResource("LabelSettings_40u6a")
horizontal_alignment = 1

[node name="From" type="PanelContainer" parent="Button/HBoxContainer"]
material = SubResource("CanvasItemMaterial_cr5tf")
custom_minimum_size = Vector2(150, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
mouse_filter = 2
theme = ExtResource("1_ppkyl")

[node name="From" type="Label" parent="Button/HBoxContainer/From"]
material = SubResource("CanvasItemMaterial_cr5tf")
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.25
text = "Name"
label_settings = SubResource("LabelSettings_40u6a")
horizontal_alignment = 1

[node name="EmailBody" type="PanelContainer" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = SubResource("GDScript_xm834")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="EmailBody"]
z_index = 1
layout_mode = 2
mouse_filter = 0
script = ExtResource("4_m8jdo")

[node name="DeliverySoftText" type="RichTextLabel" parent="EmailBody/ScrollContainer"]
z_index = 1
clip_contents = false
custom_minimum_size = Vector2(208.56, 27.245)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0.6, 0.898039, 0.313726, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_tqi3w")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[font_size=45pt][center]Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet dignissim egestas. Nam fermentum ante sed laoreet rhoncus. Quisque eleifend condimentum egestas. Suspendisse et sollicitudin erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris nec libero blandit, fermentum mauris id, porta nisi. Mauris turpis nibh, euismod tincidunt mi sed, semper rutrum mi. Sed finibus gravida nisi sed tincidunt.

Nam leo tellus, cursus vel aliquam et, facilisis sit amet urna. Sed sapien diam, lobortis id sagittis eget, convallis at lectus. Suspendisse sodales pharetra sapien, in scelerisque nisi faucibus quis. Ut consequat arcu vitae neque congue, in dapibus nisi ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas semper tortor id mollis volutpat. Duis ac diam vitae mi ultricies lacinia a vitae libero. In libero leo, pretium ac varius et, semper quis nunc.

Proin egestas, nulla eget iaculis pretium, massa erat rhoncus ligula, et dictum ex lectus at purus. Quisque pulvinar felis vitae porttitor feugiat. Vivamus pharetra ipsum suscipit purus malesuada congue. Nulla porta nisi bibendum pretium blandit. Sed placerat congue nulla, vel eleifend libero euismod et. In sed enim vitae dui varius viverra vel pulvinar ligula. Sed orci risus, accumsan quis turpis a, viverra facilisis tellus.

Duis fringilla, ante eu volutpat accumsan, libero elit ultrices lorem, eu congue nibh arcu quis dui. Nulla facilisi. Nunc vel dictum sem. In euismod pellentesque risus, vel gravida neque ultrices placerat. Nulla consectetur sodales purus, in rhoncus neque tristique sit amet. Nam porttitor neque augue, at sollicitudin mauris blandit sed. Duis dolor elit, vulputate a magna at, ornare vestibulum dolor. Morbi quis fermentum ipsum, non condimentum nisl. Nulla fringilla, orci ac pretium varius, enim odio tincidunt nisi, in viverra sem mauris et magna. Phasellus massa dui, viverra at diam ac, posuere feugiat leo. Pellentesque consequat, augue quis pretium dictum, ligula ante rhoncus eros, id tempor risus metus ut nibh.[/center]"
fit_content = true
scroll_active = false

[connection signal="toggled" from="Button" to="EmailBody" method="_on_email_template_toggled"]
